одним косяком меньше

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
   <figure class="card__image">
     <img src="./images/card-image.png" alt="Изображение машины" class="image" />
-    <figcaption class="card__image-label"></html></figcaption>
+    <figcaption class="card__image-label"></figcaption>
   </figure>
   <div class="card__content">
     <p class="card__content-text">
