моя попытка номер

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <h2 class="card__title">1 спринт: Я — чистый лист</h2>
   <figure class="card__image">
     <img src="./images/card-image.png" alt="Машина в оттенках серого" class="image image-grayscale" />
-    <figcaption class="card__image-label"></html></figcaption>
+    <figcaption class="card__image-label"></figcaption>
   </figure>
   <div class="card__content">
     <p class="card__content-text">
