--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <h2 class="card__title">1 спринт: А если не получится?</h2>
   <figure class="card__image">
     <img src="./images/card-image.png" alt="Яркая машина" class="image image-saturate" />
-    <figcaption class="card__image-label"><css></figcaption>
+    <figcaption class="card__image-label"></figcaption>
   </figure>
   <div class="card__content">
     <p class="card__content-text">
@@ -124,7 +124,7 @@
   <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
   <figure class="card__image">
     <img src="./images/card-image.png" alt="Цветовая коррекция машины" class="image image-huerotate" />
-    <figcaption class="card__image-label"><desigions></figcaption>
+    <figcaption class="card__image-label"></figcaption>
   </figure>
   <div class="card__content">
     <p class="card__content-text">
@@ -188,7 +188,7 @@
   <h2 class="card__title">3 спринт: Обходные стратегии</h2>
   <figure class="card__image">
     <img src="./images/card-image.png" alt="Сепия-машина" class="image image-sepia" />
-    <figcaption class="card__image-label"><support></figcaption>
+    <figcaption class="card__image-label"></figcaption>
   </figure>
   <div class="card__content">
     <p class="card__content-text">
@@ -249,7 +249,7 @@
   <h2 class="card__title">&laquo;Сейчас я здесь&raquo;</h2>
   <figure class="card__image">
     <img src="./images/card-image.png" alt="Прозрачная машина с оттенком" class="image image-huerotate-opacity" />
-    <figcaption class="card__image-label"><experience></figcaption>
+    <figcaption class="card__image-label"></figcaption>
   </figure>
   <div class="card__content">
     <p class="card__content-text">
