--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
   <figure class="card__image">
     <img src="./images/card-image.png" alt="Размытая машина" class="image image-blur" />
-    <figcaption class="card__image-label"><lifes-style: none;></figcaption>
+    <figcaption class="card__image-label"></figcaption>
   </figure>
   <div class="card__content">
     <p class="card__content-text">
