Буква ОК заработала, надо было js внимательнее читать(

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </svg>
     <span class="dialog-message">Вставьте дискету, чтобы продолжить</span>
   </div>
-  <button type="button" class="save-confirm">
+  <button type="button" class="button-save">
     <span class="confirm-text">ок</span>
   </button>
 </dialog>
