Сложноо в фильтры попадать

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 <article class="memory-card">
   <h2 class="card-heading">&laquo;Сейчас я здесь&raquo;</h2>
   <figure class="card-picture">
-    <img src="./images/standartCard.png" alt="Типа прозрачная цветастая машина" class="pic-element pic-hueopac" />
+    <img src="./images/standartCard.png" alt="Типа прозрачная цветастая машина" class="pic-element pic-hardfilter" />
     <figcaption class="picture-tag"></figcaption>
   </figure>
   <div class="card-body">
