--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h2 class="card-heading">Фритрек и нулевой спринт: Подготовка к работе</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Просто машина" class="pic-element" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">&lt;/HTML&gt;</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
@@ -60,7 +60,7 @@
   <h2 class="card-heading">1 спринт: Я — чистый лист</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Серенькая мащинка" class="pic-element pic-gray" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">&lt;/HTML&gt;</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
@@ -89,7 +89,7 @@
   <h2 class="card-heading">1 спринт: А если не получится?</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Кислотная машина" class="pic-element pic-sat" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">&lt;CSS&gt;</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
@@ -121,7 +121,7 @@
   <h2 class="card-heading">2 спринт: Погоня за идеалом</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Цветовая коррекция машины" class="pic-element pic-hue" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">&lt;designions&gt;</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
@@ -153,7 +153,7 @@
   <h2 class="card-heading">2 спринт: О тех, кто рядом</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Инвертированное изображение машины" class="pic-element pic-inv" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">care</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
@@ -185,7 +185,7 @@
   <h2 class="card-heading">3 спринт: Обходные стратегии</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Машина вся такая в сепии короче" class="pic-element pic-sepia" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">&lt;support&gt;</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
@@ -215,7 +215,7 @@
   <h2 class="card-heading">3 спринт: Когда опускаются руки</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Машина когда у тебя -8" class="pic-element pic-blur" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">&lt;lifes-style: none;&gt;</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
@@ -246,7 +246,7 @@
   <h2 class="card-heading">&laquo;Сейчас я здесь&raquo;</h2>
   <figure class="card-picture">
     <img src="./images/standartCard.png" alt="Типа прозрачная цветастая машина" class="pic-element pic-hardfilter" />
-    <figcaption class="picture-tag"></figcaption>
+    <figcaption class="picture-tag">&lt;experience&gt;</figcaption>
   </figure>
   <div class="card-body">
     <p class="body-paragraph">
