--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 </article>
 
 <div class="action-zone">
-  <button type="button" class="button-remember">
+  <button type="button" class="button-remember" onclick="window['dialog-id'].showModal()">
     <svg class="floppy-icon" viewbox="0 0 39 39">
       <use href="./svg/floppy.svg#floppy"/>
     </svg>
@@ -329,7 +329,7 @@
     </svg>
     <span class="dialog-message">Вставьте дискету, чтобы продолжить</span>
   </div>
-  <button type="button" class="button-save">
+  <button type="button" class="button-save" onclick="window['dialog-id'].close()">
     <span class="confirm-text">ок</span>
   </button>
 </dialog>
