--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 </article>
 
 <div class="action-zone">
-  <button type="button" class="button-remember" onclick="document.getElementById('dialog-id').showModal()">>
+  <button type="button" class="button-remember" onclick="document.getElementById('dialog-id').showModal()">
     <svg class="floppy-icon" viewbox="0 0 39 39">
       <use href="./svg/floppy.svg#floppy"/>
     </svg>
